--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pytz = "^2023.3.post1"
 pyairtable = "^2.2.2"
 utils = "^1.0.2"
 routes = "^2.5.1"
+bcrypt = "^4.1.2"
+flask-limiter = "^3.5.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
