--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ utils = "^1.0.2"
 routes = "^2.5.1"
 bcrypt = "^4.1.2"
 flask-limiter = "^3.5.1"
+sqlalchemy = "^2.0.27"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
