--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ routes = "^2.5.1"
 bcrypt = "^4.1.2"
 flask-limiter = "^3.5.1"
 sqlalchemy = "^2.0.27"
+openai = "^1.13.3"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
