--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 flask>=3.0.0,<4.0.0
 redis>=5.0.1,<6.0.0
 requests>=2.31.0,<3.0.0
+flask-cors>=4.0.0,<5.0.0
+airtable>=0.4.8,<0.5.0
+itsdangerous>=2.1.2,<3.0.0
+cryptography>=41.0.7,<42.0.0
+pytz>=2023.3.0,<2024.0.0
+pyairtable>=2.2.2,<3.0.0
+bcrypt>=4.1.2,<5.0.0
+flask-limiter>=3.5.1,<4.0.0
+sqlalchemy>=2.0.27,<3.0.0
+openai>=1.13.3,<2.0.0
