--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ tiktoken>=0.6.0,<1.1.1
 pymupdf>=1.24.0,<2.0.0
 python-docx>=1.1.0,<2.0.0
 python-dotenv>=1.0.0,<2.0.0
+authlib>=1.3.1,<2.0.0
+pyjwt>=2.8.0,<3.0.0
