--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ python-dotenv>=1.0.0,<2.0.0
 authlib>=1.3.1,<2.0.0
 pyjwt>=2.8.0,<3.0.0
 APScheduler>=3.10.4,<4.0.0
+timeout-decorator>=0.5.0,<1.0.0
